# LeakShield

./: .gitignore  BENCHMARK.md  BENCHMARK_ANALYSIS.md  CHANGELOG.md  COMPLETION_REPORT.md  CONTRIBUTING.md  ENVIRONMENT_FIXED.md  ENVIRONMENT_SETUP.md  FEATURES.md  IMAGE_LEAKAGE_DETECTION.md  ISSUES_STATUS.md  LEAKAGE_DETECTION_SUMMARY.md  LICENSE  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES_v0.3.0.md  STATUS_REPORT.md  STRUCTURE.md  TASK_COMPLETION_SUMMARY.md  check_image_leakage.py  demo.py  demo_image_check.py  demo_mdf.py  pyproject.toml
.github/workflows/: ci.yml  tests.yml
benchmarks/: run_benchmark.py
benchmarks/results/: benchmark_results.json
examples/: basic_usage.ipynb
leakshield/: __init__.py  cli.py  config.py  report.py  result.py
leakshield/engines/: __init__.py  base.py  hash_engine.py  image_engine.py  mdf_engine.py
tests/: conftest.py  test_hash_engine.py  test_image_engine.py  test_mdf_engine.py  test_result.py
