[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leakshield"
version = "0.3.0"
description = "轻量级机器学习数据泄露检测库，基于 Kapoor & Narayanan 2023 分类法"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "LeakShield Contributors"}
]
keywords = ["machine-learning", "data-leakage", "detection", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.0",
    "scipy>=1.9.0",
    "datasketch>=1.5.0",
    "click>=8.0.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
]
image = [
    "Pillow>=9.0.0",
]

[project.scripts]
leakshield = "leakshield.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/leakshield"
Documentation = "https://github.com/yourusername/leakshield#readme"
Repository = "https://github.com/yourusername/leakshield"
Issues = "https://github.com/yourusername/leakshield/issues"

[tool.hatch.build.targets.wheel]
packages = ["leakshield"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=leakshield --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
